syntax = "proto3";

package sso;

option go_package = "example.com/channel-management/src/proto/channel-mgmt";

service ChannelManagement {
    rpc CreateChannel (CreateChannelRequest) returns (CreateChannelResponse) {}
    rpc DeleteChannel (DeleteChannelRequest) returns (DeleteChannelResponse) {}
    rpc UpdateChannel (UpdateChannelRequest) returns (UpdateChannelResponse) {}
    rpc JoinChannel (JoinChannelRequest) returns (JoinChannelResponse) {}
    rpc KickUserChannel (KickUserChannelRequest) returns (KickUserChannelResponse) {}
    rpc CanWriteChannel (CanWriteChannelRequest) returns (CanWriteChannelResponse) {}
    rpc MakeChannelAdmin (MakeChannelAdminRequest) returns (MakeChannelAdminResponse) {}
    rpc DeleteChannelAdmin (DeleteChannelAdminRequest) returns (DeleteChannelAdminResponse) {}
    rpc IsChannelAdmin (IsChannelAdminRequest) returns (IsChannelAdminResponse) {}
    rpc GetChanUsers (GetChanUsersRequest) returns (GetChanUsersResponse) {}
    
}

message CreateChannelRequest {
    string name = 1;
    string description = 2;
    string creator_id = 3;
}

message CreateChannelResponse {
    string channel_id = 1;
}

message DeleteChannelRequest {
    string channel_id = 1;
    string user_id = 2;
}

message DeleteChannelResponse {}

message UpdateChannelRequest {
    string channel_id = 1;
    string name = 2;
    string description = 3;
    string user_id = 4;
}

message UpdateChannelResponse {}

message JoinChannelRequest {
    string channel_id = 1;
    string user_id = 2;
}

message JoinChannelResponse {}

message KickUserChannelRequest {
    string channel_id = 1;
    string user_id = 2;
    string requesting_user_id = 3;
}

message KickUserChannelResponse {}

message CanWriteChannelRequest {
    string channel_id = 1;
    string user_id = 2;
}

message CanWriteChannelResponse {
    bool can_write = 1;
}

message MakeChannelAdminRequest {
    string channel_id = 1;
    string user_id = 2;
    string requesting_user_id = 3;
}

message MakeChannelAdminResponse {}

message DeleteChannelAdminRequest {
    string channel_id = 1;
    string user_id = 2;
    string requesting_user_id = 3;
}

message DeleteChannelAdminResponse {}

message IsChannelAdminRequest {
    string channel_id = 1;
    string user_id = 2;
}

message IsChannelAdminResponse {
    bool is_admin = 1;
}

message GetChanUsersRequest {
    string channel_id = 1;
}

message GetChanUsersResponse {
    repeated string user_ids = 1;
}